Changes since last push:
 - Refactored Tile
 - Some tiles now deal damage

Known "features":
 - The strenth of gravity is independent of the world.
 - Things that move multiple tiles per second won't collide as if they were moving in a straight line. The best way to solve this may be to not allow anything to move that fast, possibly via multiple updates between renderings.
 - The spawn point sometimes puts the player on top of dirt. Spawning should be changed so it destroys any tiles in the way.
 - You can place dirt on top of creatures, including yourself
 - Tiles have an opacity between 0 and 64, but right now it only matters whether it's zero or not.

Known bugs:
 - Apparently the player can fit in gaps that they can't escape.

To do:
 - rewrite almost all world generation code to use noise
 - rethink interactions between the collider and movables
 - Background tiles
 - stacking items, throwing / picking up items
 - Trees!
 - Better map generation
 - Instead of storing the health of every single tile on the map, I should just have a list of the ones that have been damaged.
 - Make the spaceInfo class just store a tiletype, not a Tile*, and use it as
the index of the Tile*
 - Store data in a file instead of in the source code (eg the size of sprites
and the properties of the different types of tiles) (probably XML)